--- a/js/app/main/main.html
+++ b/js/app/main/main.html
@@ -4,7 +4,7 @@
   <div flex layout="column">
     <md-toolbar>
       <div class="md-toolbar-tools">
-        <div class="white-text">Event Report</div>
+        <div class="white-text">Health Volunteer App</div>
       </div>
     </md-toolbar>
 
